style.css
/* ... */
.menu {
	display: none;
}

/*FOR SCREENS < 800*/
@media only screen and (max-width: 800px) {

	/*MENU*/
	.menu {
		position: fixed;
		display: block;
		visibility: hidden;
		width: 100%; height: 100%;
		left: -100%;
		background-color: #262626;
		z-index: 90; /*always show the menu on top of everything, except the menu button (was 90)*/
		transition: all .5s; /*how long does it take for the menu to open?*/
	}
	.menuActive {
		visibility: visible;
		left: 0;
	}

	
	/*NAV STYLING*/
	#navWrapper {
		position: relative;
		margin: auto;
		display: inline-block;
		width: initial;
		text-align: justify;
		top: 20%;
		left: 55%;
		font-size: 32px;
		transform: translateX(-50%);
	}

	#menuFooter {
		position: fixed;
		bottom: 0;
		width: 100%;
		padding-right: 16px; padding-left: 16px;
		box-sizing: border-box;

		font-family: customFont;
		font-size: 18px;
		color: #ababab;
	}
	#menuFooter p {
		text-align: center;
	}
	#menuFooter p:first-child {
		margin-bottom: 10px;
	}
	#menuFooter p:last-child {
		margin-top: 0px;
		font-style: italic;
	}

	ul, li {
		margin: 0; padding: 0;
	}

	ul li {
		float: initial;
		background-color: #262626;
		padding: 0 0 0 0;
		width: 200px;
		z-index: 10;

		text-align: left;
		list-style-type: none;

		border-right: initial;
		box-sizing: border-box;
	}

	ul li a {
		display: inline-block;
		padding-bottom: 14px;
		text-decoration: none;
		color: #fff;
		height: 100%;
		width: initial;
	}
	.firstNavItem {
		padding-bottom: 0px;
	}
	.secondNavItem {
		padding-top: 14px;
	}

	ul li ul li a:first-child {
		padding-bottom: 0px;
	}

	ul li ul li {
		display: block;
		visibility: visible;
		padding: 0 0 0px 30px;
		margin-bottom: 0;
		opacity: 1;
		background-color: #262626;
		z-index: 10;

		transform: translateY(0);
		transition: initial;
	}

	ul li ul li a {
		color: #fff;

	}

	ul li ul {
		display: block;
		position: relative;
		width: 100%;
		z-index: 10;
	}

	ul li:hover {
		background-color: #262626;
	}

	ul li:hover ul li {
		display: block;
		visibility: visible;
		position: relative;
		opacity: 1;
		padding: 0 0 0px 30px;
		z-index: 1;

		transform: translateY(0);
		transition-delay: 0s, 0s, 0.3s;
	}

	ul li:hover ul {
		z-index: inherit;
	}

	ul li:hover a {
		color: initial;
	}

	#menuNavActive a {
		color: #ba473e;
	}

	ul li a:active {
		color: #fff;
	}

	ul li a:visited {
		color: #fff;
	}

	#menuNavNotActive a {
		color: #fff;
	}
	/*END NAV STYLING*/

	body, html {
		position: relative;
		margin: 0px; padding: 0px;
		background-color: #e1e1e1;
		width: 100%;
		height: 100%;
		margin: auto;

		font-family: customFont;
		font-size: 22px;
		color: #262626;
	}

	#phone_header {
		position: fixed;
		display: block;
		top: 0;
		width: 100%;
		height: 120px;
		background-color: #262626;

		z-index: 90;
		box-shadow: 0px 0px 20px rgba(0, 0, 0, .2);
	}

	.menuBtn {
		position: fixed;
		top: 0px; left: 26px;
		width: 70px; height: 120px;
		z-index: 99;
	}

	#hamburger { /*create middle hamburger piece*/
		position: absolute;
		top: 0; right: 0; bottom: 0; left: 0;
		margin: auto;
		width: 40px; height: 2px;
		background-color: white;
		transition: all .3s;
	} #hamburger::before, #hamburger::after { /*create top and bottom hamburger piece*/
		position: absolute;
		width: 100%; height: 2px;
		background-color: white;
		content: "";
		transition: all .4s;
	} #hamburger::before { /*position top hamburger piece*/
		top: -14px;
	} #hamburger::after { /*position bottom hamburger piece*/
		top: 14px;
	}
	.menuBtn.active #hamburger::before { /*animate top " " */
		top: 0;
		transform: rotate(45deg);
	} .menuBtn.active #hamburger::after { /*animate bottom " " */
		top: 0;
		transform: rotate(-45deg);
	} .menuBtn.active #hamburger { /*animate middle " " */
		background: none;
	}

	#phone_logo_img {
		height: 120px;
		position: absolute;
		top: 0; right: 0; bottom: 0; left: 0;
		margin: auto;
	}

	#header {
		display: none;
	}

	#wrapper {
		width: 100%;
		background-color: white;
	}

	#content {
		margin: 30px 0 0 0;
	}

	#text {
		width: 80%;
		text-align: justify;
		margin: 120px auto auto auto;
		padding: 30px 0 30px 0;
	}

	#keuze_menu {
		position: relative;
		display: inline-block;
		width: 100%;
		margin: auto;
		opacity: 0; transition: opacity .2s ease-out;
	}

	#abstract_keuze, #figuratief_keuze {
		position: relative;
		display: block;
		top: 0; right: 0; bottom: 0; left: 0;
		float: none;
		margin: auto;
	} #abstract_keuze img, #figuratief_keuze img {
		position: relative;
		display: block;
		width: 80%; height: auto;
		top: 0; right: 0; bottom: 0; left: 0;
		margin: auto;
	} #abstract_keuze {
		margin-bottom: 60px;
	}

	#phone_ab_keuze_kopje, #phone_fig_keuze_kopje {
		position: absolute;
		display: inline-block;
		width: 90%; height: auto;
		top: 55%; right: 0; bottom: 0; left: 0;
		transform: translateY(-42%);
		margin: auto;

		color: white;
		font-family: navFont;
		font-size: 100px;
		font-weight: 500;

		text-align: center;
		z-index: 90;
	}

	#abstract_keuze_kopje {
		display: none;
	}
	#figuratief_keuze_kopje {
		display: none;
	}

	#footer {
		height: auto; max-height: 120px;
	}

	#footer #copyright {
		position: relative;
		top: 0; right: 0; bottom: 0; left: 0;
		transform: initial;
	} #copyright p {
		top: 15px;
	}

	#footer #creator {
		position: relative;
		top: 0; right: bottom: 0; left: 0;
		margin: 30px auto 0 auto;
		text-align: center;
	}

	.filter {
		display: none;
	}

	#footer p {
		font-size: 18px;
		text-align: center;
		width: 100%;
		padding-right: 16px;
		padding-left: 16px;
		box-sizing: border-box;
	}
	#creator p {
		width: 100%;
		margin: auto;
	}

	#mapsImg img {
		width: 100%;
	}

}


/*VARY INDEX.HTML THUMBNAIL FONTSIZE/POSITION < 700*/
@media only screen and (max-width: 700px) {

	#phone_ab_keuze_kopje, #phone_fig_keuze_kopje {
		top: 55%;
		transform: translateY(-46%);

		font-size: 86px;
		font-weight: 500;
	}
}
/* ... */

